# SmolLM-135M_Med

./: .gitignore  PIPELINE_README.md  README.md  benchmark.sh  config.yaml  data.py  main.py  model_utils.py  pyproject.toml  run_pipeline.sh  train.py
configs/data/: CPT_data.yaml
dataset/: chunk.py  load.py
evals/: benchmarks.py  perplexity.py
model/: train_cpt.py
results/: benchmarks_trained.json  benchmarks_untrained.json  perplexity_trained.json  perplexity_untrained.json
