[project]
name = "smollm-135-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.14.0",
    "datasets>=5.0.0",
    "evaluate>=0.4.6",
    "omegaconf>=2.3.1",
    "torch>=2.12.1",
    "transformers>=5.12.1",
    "unsloth>=2025.7.2",
]
